--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
-pandas
-streamlit-option-menu
-scikit-learn
+streamlit>=1.53.0
+pandas>=3.0.0
+streamlit-option-menu>=0.4.0
+scikit-learn>=1.8.0
